--- a/views/accounts/signup.ejs
+++ b/views/accounts/signup.ejs
@@ -1,8 +1,8 @@
-<% layout( 'layout') -%>
+<% layout('layout') -%>
   <div class="row">
     <div class="col-lg-6 col-md-offset-3">
-      <p><%= errors.length %></p>
-      <% if (errors.lengh > 0) { %>
+
+      <% if (errors.length > 0) { %>
         <div class="alert alert-danger alert-dismissible">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
