--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,28 +1,24 @@
-
-<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Jumbotron Template for Bootstrap</title>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-     <link rel="stylesheet" href="/css/custom.css">
-  </head>
+<head>
+  <title>Jumbotron Template for Bootstrap</title>
 
-  <body>
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/custom.css">
+</head>
 
-     <% include ./partials/navbar %>
-  
-   
+<body>
 
+  <% include ./partials/navbar %>
     <div class="container">
       <%- body -%>
 
-      <hr>
+    </div>
+    <!-- /container -->
 
-    
-    </div> <!-- /container -->
+    <% include ./partials/footer %>
+      <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+</body>
 
-     <% include ./partials/footer %>
-
-  </body>
 </html>
