--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,24 +1,16 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <title>Jumbotron Template for Bootstrap</title>
-
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/custom.css">
 </head>
 
 <body>
-
   <% include ./partials/navbar %>
-    <div class="container">
-      <%- body -%>
-
-    </div>
-    <!-- /container -->
-
-    <% include ./partials/footer %>
-      <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <%- body -%>
+  <% include ./partials/footer %>
+  <% include ./partials/javascriptOnly %>
+  
 </body>
-
 </html>
