--- a/views/accounts/login.ejs
+++ b/views/accounts/login.ejs
@@ -1,4 +1,4 @@
-<% layout('layout') -%>
+<% layout('layout') %>
 <div class="row">
   <div class="col-lg-6 col-md-offset-3">
     <% if (message.length > 0) { %>
@@ -22,6 +22,11 @@
         <input type="password" class="form-control" name="password">
       </div>
       <button type="submit" class="btn btn-success">Submit</button>
+      
+      <a class="btn btn-social btn-facebook" href="/auth/facebook">
+        <span class="fa fa-facebook"></span>Sign in with Facebook
+      </a>
+      
     </form>
   </div>
 </div>
