--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
 
 <body>
   <% include ./partials/navbar %>
-  <%- body -%>
+  <%- body %>
   <% include ./partials/footer %>
   <% include ./partials/javascriptOnly %>
   
