--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -11,7 +11,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4">
-      <h3>Start your search here</h3>
+      <h3>Start your search here!!!</h3>
       <p>Signup to start Buying</p>
     </div>
     <div class="col-md-4">
